--- a/BCSH2_BTEJA/MainWindow.xaml
+++ b/BCSH2_BTEJA/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BCSH2_BTEJA.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:BCSH2_BTEJA"
         xmlns:views="clr-namespace:BCSH2_BTEJA.View"
         xmlns:viewModel = "clr-namespace:BCSH2_BTEJA.ViewModel"
+        xmlns:Model="clr-namespace:BCSH2_BTEJA.Model" x:Class="BCSH2_BTEJA.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="709" Width="1067">
     <Grid>
@@ -15,14 +16,14 @@
             <ColumnDefinition Width="377*"/>
             <ColumnDefinition Width="522*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="TextView" HorizontalAlignment="Left" Margin="10,173,0,0" TextWrapping="Wrap" Text="{Binding Input, Mode =TwoWay}" VerticalAlignment="Top" Width="301" Background="Black" Foreground="White" Height="509" Grid.ColumnSpan="3"/>
+        <TextBox x:Name="TextView" HorizontalAlignment="Left" Margin="10,173,0,0" TextWrapping="Wrap" Text="{Binding Input, Mode=TwoWay}" VerticalAlignment="Top" Width="301" Background="Black" Foreground="White" Height="509" Grid.ColumnSpan="3"/>
         <Button x:Name="LoadButton" Grid.Column="1" Content="Nahrát soubor" Command="{Binding LoadCommand}" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="34" Width="131"/>
         <Button x:Name="SaveButton" Grid.Column="1" Content="Uložit do souboru" Command="{Binding SaveCommand}" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top" Height="34" Width="131" Grid.ColumnSpan="2"/>
         <Button x:Name="StartButton" Grid.Column="2" Content="Start" Command="{Binding StartCommand}" HorizontalAlignment="Left" Margin="266,43,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="56" Width="158"/>
-        <views:TokenView x:Name = "TokenViewControl" Grid.Column="2" Margin="363,159,348,11" Grid.ColumnSpan="2"/>
+        <views:TokenView x:Name = "TokenViewControl" Grid.Column="2" Margin="366,189,345,27" Grid.ColumnSpan="2"/>
         <ComboBox HorizontalAlignment="Left" Margin="-160,516,0,0" VerticalAlignment="Top" Width="120"/>
         <views:MessageView x:Name = "MessageViewControl" Grid.Column="2" Margin="148,189,19,27"/>
-        <views:OutputView x:Name = "OutputViewControl" Grid.Column="3" Margin="197,185,28,36"/>
+        <views:OutputView x:Name = "OutputViewControl" Grid.Column="3" Margin="182,189,43,27"/>
 
     </Grid>
 </Window>
