--- a/BCSH2_BTEJA/View/OutputView.xaml
+++ b/BCSH2_BTEJA/View/OutputView.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BCSH2_BTEJA.View"
              xmlns:viewModel = "clr-namespace:BCSH2_BTEJA.ViewModel"
-             mc:Ignorable="d" Height="472" Width="297">
+             mc:Ignorable="d" Height="477" Width="297">
     <Grid>
-        <ListView d:ItemsSource="{Binding Output}" Background="#FF90F17C">
+        <ListView d:ItemsSource="{Binding Output, UpdateSourceTrigger=PropertyChanged}" Background="#FF90F17C">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
