--- a/BCSH2_BTEJA/View/TokenView.xaml
+++ b/BCSH2_BTEJA/View/TokenView.xaml
@@ -5,12 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BCSH2_BTEJA.View"
              xmlns:viewModel = "clr-namespace:BCSH2_BTEJA.ViewModel"
-             mc:Ignorable="d" Height="523" Width="188">
+             mc:Ignorable="d" Height="477" Width="188">
     <Grid>
-        <ListView d:ItemsSource="{Binding Tokens}" Background="#FFC6D9FF">
+        <ListView d:ItemsSource="{Binding Tokens, UpdateSourceTrigger=PropertyChanged}" Background="#FFC6D9FF">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn/>
+                    <GridViewColumn Header="Token Type" DisplayMemberBinding="{Binding Toktype}"/>
+                    <GridViewColumn Header="Value" DisplayMemberBinding="{Binding Value}"/>
                 </GridView>
             </ListView.View>
         </ListView>
