--- a/BCSH2_BTEJA/View/TokenView.xaml
+++ b/BCSH2_BTEJA/View/TokenView.xaml
@@ -7,14 +7,14 @@
              xmlns:viewModel = "clr-namespace:BCSH2_BTEJA.ViewModel"
              mc:Ignorable="d" Height="477" Width="188">
     <Grid>
-        <ListView d:ItemsSource="{Binding Tokens, UpdateSourceTrigger=PropertyChanged}" Background="#FFC6D9FF">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Token Type" DisplayMemberBinding="{Binding Toktype}"/>
-                    <GridViewColumn Header="Value" DisplayMemberBinding="{Binding Value}"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
+        <ListBox ItemsSource="{Binding Tokens}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Path= TokType}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
